objects/test__c.object
<CustomObject>
    <fields>
        <fullName>Another_Field__c</fullName>
        <label>Another Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Haha__c</fullName>
        <label>Haha</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rich_Text__c</fullName>
        <label>Rich Text</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>String__c</fullName>
        <defaultValue>&quot;HELLO&quot;</defaultValue>
        <label>String</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <label>Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>test</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>test Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>test</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>